--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -76,3 +76,22 @@
     @apply bg-background text-foreground;
   }
 }
+
+.vertical-text-ellipsis {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden
+}
+
+.vertical-desc-ellipsis {
+  display: -webkit-box;
+  -webkit-line-clamp: 6;
+  -webkit-box-orient: vertical;
+  overflow: hidden
+}
+
+.image-hover-trigger image-hover{
+  scale: 1.4;
+  transform: translate(0, 55px)
+}
