--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -91,9 +91,10 @@
   overflow: hidden
 }
 
-html {
-    overflow-x: hidden;
-}
-div ::-webkit-scrollbar {
+.hide-scrollbar ::-webkit-scrollbar {
     background: transparent;  /* Optional: just make scrollbar invisible */
 }
+
+.mask-image {
+  -webkit-mask-image: linear-gradient(transparent 0%, black 4%, black 96%, transparent 100%);
+  mask-image: linear-gradient(red 0%, orange 25%, yellow 50%, green 75%, blue 100%);}
