--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -95,6 +95,8 @@
     background: transparent;  /* Optional: just make scrollbar invisible */
 }
 
-.mask-image {
-  -webkit-mask-image: linear-gradient(transparent 0%, black 4%, black 96%, transparent 100%);
-  mask-image: linear-gradient(red 0%, orange 25%, yellow 50%, green 75%, blue 100%);}
+@media (min-width: 768px) {
+  .mask-image {
+    -webkit-mask-image: linear-gradient(transparent 0%, black 4%, black 96%, transparent 100%);
+    mask-image: linear-gradient(red 0%, orange 25%, yellow 50%, green 75%, blue 100%);}
+}
