--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -92,7 +92,19 @@
 }
 
 .hide-scrollbar ::-webkit-scrollbar {
+    height: 0px;
+    width: 0px;
     background: transparent;  /* Optional: just make scrollbar invisible */
+    display: none;
+}
+
+.disable-scrollbar {
+  overflow: scroll;
+  height: 0px;
+  width: 0px;
+  scrollbar-height: none; /* Firefox */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE 10+ */
 }
 
 @media (min-width: 768px) {
