--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -19,8 +19,8 @@
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
  
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
+    --primary: 265 53% 39%;
+    --primary-foreground: 222.2 47.4% 100%;
  
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
@@ -36,35 +36,35 @@
     --radius: 0.5rem;
   }
  
-  .dark {
-    --background: 222.2 84% 4.9%;
+  [data-theme='dark'] {
+    --background: 0 0% 0%;
     --foreground: 210 40% 98%;
  
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
+    --muted: 255 6% 15%;
+    --muted-foreground: 255 0% 50%;
  
-    --popover: 222.2 84% 4.9%;
+    --popover: 255 9% 8%;
     --popover-foreground: 210 40% 98%;
  
-    --card: 222.2 84% 4.9%;
+    --card: 255 9% 8%;
     --card-foreground: 210 40% 98%;
  
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
+    --border: 240 3% 32%;
+    --input: 240 3% 32%;
  
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
+    --primary: 265 53% 29%;
+    --primary-foreground: 222.2 47.4% 100%;
  
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
  
-    --accent: 217.2 32.6% 17.5%;
+    --accent: 265 53% 39%;
     --accent-foreground: 210 40% 98%;
  
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 85.7% 97.3%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
  
-    --ring: 217.2 32.6% 17.5%;
+    --ring: 255 0% 30%;
   }
 }
  
