--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -26,7 +26,10 @@
     --secondary-foreground: 222.2 47.4% 11.2%;
  
     --accent: 210 40% 96.1%;
-    --accent-foreground: 210 40% 96.1%;
+    --accent-foreground: 222.2 84% 4.9%;
+    
+    --accent2: 210 40% 96.1%;
+    --accent2-foreground: 222.2 84% 4.9%;
  
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
@@ -55,11 +58,14 @@
     --primary: 265 53% 35%;
     --primary-foreground: 222.2 47.4% 100%;
  
-    --secondary: 217.2 32.6% 17.5%;
+    --secondary: 265 100% 75%;
     --secondary-foreground: 210 40% 98%;
  
     --accent: 265 53% 35%;
-    --accent-foreground: 240 4% 13%;
+    --accent-foreground: 210 40% 98%;
+    
+    --accent2: 240 4% 13%;
+    --accent2-foreground: 210 40% 98%;
  
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
